[project]
name = "graphvec"
version = "0.1.0"
description = "Embedded persistent graph database with vector search"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = []   # zero mandatory deps — stdlib only

[project.optional-dependencies]
vector = ["numpy>=1.24"]
faiss  = ["faiss-cpu>=1.7", "numpy>=1.24"]
viz    = ["matplotlib>=3.7", "networkx>=3.0"]
pandas = ["pandas>=2.0"]
dev    = ["pytest>=7.0", "pytest-cov", "ruff", "numpy>=1.24"]

[project.urls]
Homepage   = "https://github.com/yourusername/graphvec"
Repository = "https://github.com/yourusername/graphvec"
Issues     = "https://github.com/yourusername/graphvec/issues"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphvec"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "--tb=short -q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/graphvec"]
omit   = ["*/viz.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "numpy>=2.2.6",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]
